corrected package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "@iota-wiki/shared-components",
   "version": "1.0.0",
   "description": "Shared components you can use with the iota-wiki-cli",
   "main": "./dist/cjs/index.js",
